# argos-win

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
docs/: integration.md  setup-windows.md  wsl-dev.md
examples/: python_signaling_server.py
scripts/: run_dev.ps1  run_wsl.sh
src/argos_win/: __init__.py  main.py
src/argos_win/app/: connection_state.py  streaming_orchestrator.py
src/argos_win/config/: settings.py  store.py
src/argos_win/gui/: main_window.py
src/argos_win/gui/widgets/: preview_widget.py  status_indicator.py
src/argos_win/infrastructure/: logging.py  qt_platform.py
src/argos_win/protocol/: constants.py  errors.py  messages.py
src/argos_win/services/: frame_pipeline.py  network_info.py  virtual_camera.py
src/argos_win/signaling/: server.py  session.py  websocket_handler.py
src/argos_win/webrtc/: codec_policy.py  peer_manager.py  video_track_consumer.py
tests/unit/: test_messages.py
