[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-win"
version = "1.0.0"
description = "Argos Windows client — webcam virtual a partir do app Android"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15",
    "opencv-python-headless>=4.8",
    "aiortc>=1.6",
    "aiohttp>=3.9",
    "pyvirtualcam>=0.11",
    "numpy>=1.26",
    "av>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
argos-win = "argos_win.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
